--- a/workspace/Cargo.toml
+++ b/workspace/Cargo.toml
@@ -9,3 +9,4 @@ authors = [
 [dependencies]
 serde = { version = "1.0.130", features = ["derive"] }
 serde-resp = "0.3.1"
+tokio = { version = "1.11.0", features = ["full"] }
