--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -6,7 +6,7 @@ COPY src ./src
 RUN cargo build --release
 
 
-FROM debian:buster-slim
+FROM ubuntu:latest
 
 WORKDIR /rediz
 COPY --from=builder /rediz/target/release/rediz .
